--- a/html/introduction-to-html/getting-started/index.html
+++ b/html/introduction-to-html/getting-started/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>La Page Test De PrincesaSarah</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <h1>C'est ma page internet, je l'ai <strong>codé en langage HTML</strong>.</h1>
+    <p>Un lien vers mon <a href="https://www.mozilla.org/" 
+                           title="Page d'accueil de Mozilla" 
+                           target="_blank">site Web préféré</a>.</p>
   </body>
 </html>
